# ipu7-camera-hal

./: CMakeLists.txt  README.md  meson.build
libcamera/: AEStateMachine.cpp  AEStateMachine.h  AFStateMachine.cpp  AFStateMachine.h  AWBStateMachine.cpp  AWBStateMachine.h  Camera3AMetadata.cpp  Camera3AMetadata.h  CameraHal.cpp  CameraHal.h  Frames.cpp  Frames.h  HwPrivacyControl.cpp  HwPrivacyControl.h  IntelAEStateMachine.cpp  IntelAEStateMachine.h  IntelAFStateMachine.cpp  IntelAFStateMachine.h  IntelAWBStateMachine.cpp  IntelAWBStateMachine.h  MakerNoteBuilder.cpp  MakerNoteBuilder.h  MockCameraHal.cpp  MockCameraHal.h  ParameterConverter.cpp  ParameterConverter.h  PrivacyControl.cpp  PrivacyControl.h  ZslCapture.cpp  ZslCapture.h  ipu7.cpp  meson.build
libcamera/ipa/: IPCCca.cpp  IPCCca.h  IPCIntelCca.cpp  IPCIntelCca.h  meson.build
libcamera/ipa/client/: CcaClient.cpp  CcaClient.h  IGPUIPAClient.cpp  IGPUIPAClient.h  IPAClient.cpp  IPAClient.h  IPAClientWorker.cpp  IPAClientWorker.h  IPAMemory.cpp  IPAMemory.h  IntelAlgoClient.cpp  IntelAlgoClient.h  IntelCcaClient.cpp  IntelCcaClient.h
libcamera/src/iutils/: Thread.h
libcamera/src/v4l2/: MediaControl.cpp  MediaControl.h
modules/: CMakeLists.txt  meson.build
modules/algowrapper/: CMakeLists.txt  IntelCca.cpp  IntelCca.h  IntelFaceDetection.cpp  IntelFaceDetection.h  IntelICBM.cpp  IntelICBM.h  StatsTypes.h
modules/algowrapper/graph/: GraphConfigImpl.cpp  GraphConfigImpl.h  GraphConfigPipe.cpp  GraphConfigPipe.h
modules/ipu_desc/: ipu-psys.h
modules/ipu_desc/ipu75xa/: BBPS_ids_array.h  CBLayoutUtils.cpp  CBLayoutUtils.h  FragmentsConfigurator.cpp  FragmentsConfigurator.h  GraphResolutionConfigurator.cpp  GraphResolutionConfigurator.h  GraphResolutionConfiguratorAutogen.cpp  GraphResolutionConfiguratorAutogen.h  Ipu75xaGraphResolutionConfiguratorAutogen.cpp  Ipu75xaGraphResolutionConfiguratorAutogen.h  Ipu75xaStaticGraphAutogen.cpp  Ipu75xaStaticGraphAutogen.h  Ipu75xaStaticGraphBinaryAutogen.h  Ipu75xaStaticGraphDataPreloadAutogen.c  Ipu75xaStaticGraphDataPreloadAutogen.h  Ipu75xaStaticGraphReaderAutogen.cpp  Ipu75xaStaticGraphReaderAutogen.h  Ipu75xaStaticGraphTypesAutogen.h  Ipu75xaTerminalDescriptorAutogen.cpp  Ipu75xaTerminalDescriptorAutogen.h  StaticGraphAutogen.h  StaticGraphBinaryAutogen.h  StaticGraphReaderAutogen.h  StaticGraphTypesAutogen.h  ipu_manifest_db_ipu7_psys_cb_bbps_descriptors.h  ipu_manifest_db_ipu7_psys_cb_lbff_descriptors.h  ipu_manifest_db_ipu7_psys_cb_lbff_dev_ids.h
modules/ipu_desc/ipu7x/: BBPS_ids_array.h  CBLayoutUtils.cpp  GraphResolutionConfigurator.cpp  GraphResolutionConfiguratorInclude.h  Ipu7xGraphResolutionConfiguratorAutogen.cpp  Ipu7xGraphResolutionConfiguratorAutogen.h  Ipu7xStaticGraphAutogen.cpp  Ipu7xStaticGraphAutogen.h  Ipu7xStaticGraphBinaryAutogen.h  README  (+14 more)
modules/livetune/: LiveTuning.cpp
modules/memory/: BufferAllocator.h  CMakeLists.txt
modules/v4l2/: v4l2_device.cc  v4l2_device.h  v4l2_subdevice.cc  v4l2_video_node.cc
src/: CMakeLists.txt  meson.build
src/3a/: AiqCore.cpp  AiqCore.h  AiqEngine.cpp  AiqEngine.h  AiqResult.cpp  AiqResult.h  AiqResultStorage.cpp  AiqResultStorage.h  AiqSetting.cpp  AiqSetting.h  AiqStatistics.h  AiqUnit.cpp  AiqUnit.h  AiqUtils.cpp  AiqUtils.h  CMakeLists.txt  Dvs.cpp  Dvs.h  I3AControlFactory.h  LensManager.cpp  LensManager.h  Ltm.cpp  Ltm.h  MakerNote.cpp  MakerNote.h  SensorManager.cpp  SensorManager.h
src/core/: BufferInterface.h  BufferQueue.cpp  BufferQueue.h  CMakeLists.txt  CameraBuffer.cpp  CameraBuffer.h  CameraBufferPool.cpp  CameraBufferPool.h  CameraContext.cpp  CameraContext.h  CameraDevice.cpp  CameraDevice.h  CameraEvent.cpp  CameraEvent.h  CameraEventType.h  CameraStream.cpp  CameraStream.h  CaptureUnit.cpp  CaptureUnit.h  CsiMetaDevice.cpp  CsiMetaDevice.h  DeviceBase.cpp  DeviceBase.h  FileSource.cpp  FileSource.h  IProcessingUnit.h  IProcessingUnitFactory.cpp  IProcessingUnitFactory.h  IpuPacAdaptor.cpp  IpuPacAdaptor.h  IspSettings.h  LensHw.cpp  LensHw.h  MockPSysDevice.cpp  MockPSysDevice.h  PSysDevice.cpp  PSysDevice.h  ProcessingUnit.cpp  ProcessingUnit.h  RequestThread.cpp  (+13 more)
src/evcp/: EvcpManager.cpp  EvcpManager.h
src/fd/: CMakeLists.txt  FaceDetection.cpp  FaceDetection.h  FaceType.h  IFaceDetection.cpp  IFaceDetection.h
src/hal/: CMakeLists.txt  CameraHal.cpp  CameraHal.h  ICamera.cpp  MockCameraHal.cpp  MockCameraHal.h  ParameterConvert.cpp  ParameterConvert.h
src/icbm/: ICBMThread.cpp  ICBMThread.h  ICBMTypes.h  MemoryChain.cpp  MemoryChain.h  OPIC2Api.h  OnePunchIC2.cpp  OnePunchIC2.h
src/image_process/: CMakeLists.txt  IImageProcessor.h  PostProcessorBase.cpp  PostProcessorBase.h  PostProcessorCore.cpp  PostProcessorCore.h  ProcessType.h
src/iutils/: CMakeLists.txt  CameraDump.cpp  CameraDump.h  CameraLog.cpp  CameraLog.h  CameraShm.cpp  CameraShm.h  CameraTrace.cpp  Errors.h  LogSink.cpp  LogSink.h  ModuleTags.cpp  ModuleTags.h  PerfettoTrace.cpp  RWLock.h  ScopedAtrace.cpp  SwImageConverter.cpp  SwImageConverter.h  Thread.cpp  Thread.h  Trace.cpp  Trace.h  Utils.cpp  Utils.h
src/jpeg/: CMakeLists.txt  EXIFMaker.cpp  EXIFMaker.h  EXIFMetaData.cpp  EXIFMetaData.h  Exif.h  ExifCreater.cpp  ExifCreator.cpp  ExifCreator.h  IJpegEncoder.h  JpegMaker.cpp  JpegMaker.h
src/metadata/: CMakeLists.txt  CameraMetadata.cpp  CameraMetadata.h  ParameterHelper.cpp  ParameterHelper.h  Parameters.cpp  icamera_metadata_base.cpp  icamera_metadata_base.h  icamera_metadata_tag_info.c  icamera_metadata_tags.h
src/platformdata/: AiqInitData.cpp  AiqInitData.h  CMakeLists.txt  CameraParserInvoker.cpp  CameraParserInvoker.h  CameraSensorsParser.cpp  CameraSensorsParser.h  CameraTypes.h  JsonCommonParser.cpp  JsonCommonParser.h  JsonParserBase.cpp  JsonParserBase.h  PlatformData.cpp  PlatformData.h  PnpDebugControl.cpp  PnpDebugControl.h
src/scheduler/: CameraScheduler.cpp  CameraScheduler.h  CameraSchedulerPolicy.cpp  CameraSchedulerPolicy.h
src/v4l2/: CMakeLists.txt  MediaControl.cpp  MediaControl.h  SysCall.cpp  SysCall.h  V4l2DeviceFactory.cpp  V4l2DeviceFactory.h
(+206 files in other folders)
